apps/argocd/overlay/patch-deployment-argocd-repo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  replicas: 3
  template:
    metadata:
      annotations:
        ethos.corp.adobe.com/logging-sourcetype: argocd-repo-server
