apps/argocd/overlay/patch-deployment-argocd-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    metadata:
      annotations:
        ethos.corp.adobe.com/logging-sourcetype: argocd-server
    spec:
      containers:
      - name: argocd-server
