apps/argocd/overlay/delete-np-argocd-application-controller-network-policy.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  name: argocd-application-controller-network-policy
  namespace: argocd
