apps/argocd/overlay/delete-np-argocd-applicationset-controller-network-policy.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-applicationset-controller-network-policy
