apps/argocd/overlay/delete-np-argocd-dex-server-network-policy.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-dex-server-network-policy
