apps/argocd/overlay/delete-np-argocd-server-network-policy.yaml
# https://stackoverflow.com/a/66074466
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  name: argocd-server-network-policy
  namespace: argocd
